--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "classmap": [
         ],
         "psr-4": {
-            "tezzamiller\\template\\": "src\\Template"
+            "tezzamiller\\template\\": "src"
         }
     },
     "minimum-stability": "stable"
